feat(pwa): Implement comprehensive Progressive Web App capabilities (Phase 20)
Implemented full PWA support with service workers, background synchronization,
push notifications, and app installation capabilities. The grocery list app
can now be installed on mobile and desktop devices, works completely offline,
and syncs changes automatically in the background.

## Features Implemented

### Service Worker & Caching
- Custom service worker with Workbox 7.3.0 integration
- Smart caching strategies (cache-first, network-first, stale-while-revalidate)
- Offline-first functionality with complete app availability
- Cache management with automatic cleanup and expiration
- Network-first strategy for Zero sync API with offline fallback

### Background Synchronization
- Background Sync API integration for Chromium browsers
- Intelligent polling fallback for Firefox and Safari (30s interval)
- Three-tier fallback strategy ensures reliability across all browsers
- Integration with existing offline queue manager
- Manual sync trigger always available
- Works even when app is closed (Chromium)

### Push Notifications
- Complete push notification system with VAPID authentication
- 11 notification event types (items, lists, budget, conflicts)
- Frontend subscription management
- Backend notification controller with web-push
- Smart permission prompt (waits for user engagement)
- Database table for push subscriptions

### PWA Manifest & Installation
- Complete manifest.json with app metadata
- 13 PNG icon sizes (16x16 through 512x512)
- 2 maskable icons for Android adaptive icons
- Automated icon generation with Sharp library
- Green brand color theme (#4caf50)
- App shortcuts for quick actions
- Windows tile configuration

### Service Worker Lifecycle
- Automatic service worker registration
- Update detection and user-friendly prompt UI
- Skip waiting pattern with user consent
- ServiceWorkerContext for global state management
- Version management and cache cleanup

### UI Component

--- a/index.html
+++ b/index.html
@@ -2,9 +2,34 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Grocery List</title>
+    <title>Grocery List App</title>
+
+    <!-- Favicon -->
+    <link rel="icon" type="image/x-icon" href="/favicon.ico" />
+    <link rel="icon" type="image/png" sizes="32x32" href="/icons/icon-32x32.png" />
+    <link rel="icon" type="image/png" sizes="16x16" href="/icons/icon-16x16.png" />
+
+    <!-- PWA Manifest -->
+    <link rel="manifest" href="/manifest.json">
+    <meta name="theme-color" content="#4caf50">
+
+    <!-- iOS Meta Tags -->
+    <link rel="apple-touch-icon" sizes="180x180" href="/icons/icon-180x180.png">
+    <link rel="apple-touch-icon" sizes="152x152" href="/icons/icon-152x152.png">
+    <link rel="apple-touch-icon" sizes="120x120" href="/icons/icon-120x120.png">
+    <link rel="apple-touch-icon" href="/icons/icon-192x192.png">
+    <meta name="apple-mobile-web-app-capable" content="yes">
+    <meta name="apple-mobile-web-app-status-bar-style" content="default">
+    <meta name="apple-mobile-web-app-title" content="Grocery">
+
+    <!-- Microsoft Tile -->
+    <meta name="msapplication-TileColor" content="#4caf50">
+    <meta name="msapplication-TileImage" content="/icons/icon-144x144.png">
+
+    <!-- SEO Meta Tags -->
+    <meta name="description" content="A collaborative grocery list app with real-time sync. Share lists with family and friends, track prices, and never forget an item.">
+    <meta name="keywords" content="grocery list, shopping list, collaborative list, real-time sync, offline support">
   </head>
   <body>
     <div id="root"></div>
